# capstone-POV

./: .gitignore  LICENSE  README.md  deploy.sh
esp32/capstone/: platformio.ini
esp32/capstone/src/: main.cpp
frontend/: .eslintrc.js  README.md  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.html  index.js
frontend/src/components/: ControlPanel.tsx  ImageComponent.tsx
frontend/src/containers/: ControlPanelContainer.tsx  ImageContainer.tsx  ImageUploadContainer.tsx
frontend/src/data/: ApiConstants.ts  ImagesClient.ts
frontend/src/js/components/: Test.js
frontend/src/models/: Image.ts
server/: .flaskenv  README.md  image_processor.py  motor_script.py  pyproject.toml
server/migrations/versions/: 2f2a42b93ab3_add_initial_image_table.py  4a916694f1ba_add_initial_image_table.py
server/server/: __init__.py  app.py  image_processor.py  models.py  motor_script.py  settings.py
