[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.isort]
profile = "black"
src_paths = ["manage.py", "server"]

[tool.taskipy.tasks]
pre_format = "isort ."
format = "black manage.py server"
run = "./manage.py runserver"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
taskipy = "^1.3.0"
isort = "^5.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
